# pybsp

./: Makefile.am  Makefile.in  Makefile.osx  README  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/frontend/: module.hpp
include/runtime/: BSP.hpp  BSPArrayPartition.hpp  BSPArrayRegistration.hpp  BSPArrayShape.hpp  BSPException.hpp  BSPGlobalArray.hpp  BSPGlobalRequest.hpp  BSPGlobalRequestLinearMapping.hpp  BSPGlobalRequestPointSequence.hpp  BSPGlobalRequestPointTensor.hpp  BSPGlobalRequestRegion.hpp  BSPGlobalRequestRegionSequence.hpp  BSPGlobalRequestRegionTensor.hpp  BSPGrid.hpp  BSPIndexSet.hpp  BSPIndexSetPointSequence.hpp  BSPIndexSetPointTensor.hpp  BSPIndexSetRegionSequence.hpp  BSPIndexSetRegionTensor.hpp  BSPLocalArray.hpp  BSPLocalRequest.hpp  BSPLocalRequestPointSequence.hpp  BSPLocalRequestPointTensor.hpp  BSPLocalRequestRegion.hpp  BSPLocalRequestRegionSequence.hpp  BSPLocalRequestRegionTensor.hpp  BSPMessage.hpp  BSPNameSpace.hpp  BSPNamedObject.hpp  BSPNet.hpp  BSPRuntime.hpp
src/frontend/: configure.scan  module.cpp  pybsp.cpp
src/runtime/: BSPArrayPartition.cpp  BSPArrayRegistration.cpp  BSPArrayShape.cpp  BSPException.cpp  BSPGlobalArray.cpp  BSPGlobalRequest.cpp  BSPGlobalRequestLinearMapping.cpp  BSPGlobalRequestPointSequence.cpp  BSPGlobalRequestPointTensor.cpp  BSPGlobalRequestRegion.cpp  BSPGlobalRequestRegionSequence.cpp  BSPGlobalRequestRegionTensor.cpp  BSPGrid.cpp  (+18 more)
test/: simple01.py  simple02.py  simple03.py
(+64 files in other folders)
